<resources>
    <string name="app_name" translatable="false">YSYP</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_edit" translatable="false">Edit</string>
    <string name="add_data" translatable="false">إضافة البيانات</string>
    <string name="add_stocking_warehouse" translatable="false">ترصيد المستودع</string>
    <string name="add_reportes" translatable="false"> تقارير الرصيد الأول  </string>
    <string name="reportes" translatable="false"> التقارير  </string>
    <string name="backup" translatable="false"> نسخةاحتياطية  </string>
    <string name="import_backup" translatable="false"> استيراد قاعدةالبيانات  </string>
    <string name="add_reportes_daily" translatable="false"> تقارير الحركات اليومية  </string>
    <string name="title_report_first_balance" translatable="false">  تقرير ترصيدالمستودع</string>
    <string name="title_report_daily_movements" translatable="false">  تقرير الحركات اليومية</string>
    <string name="title_all_fragments" translatable="false">  تكويد المستودع</string>
    <string name="title_report_category" translatable="false">  تقرير الأصناف</string>
    <string name="title_report_store" translatable="false">  تقرير المخازن</string>
    <string name="title_empty_daily_movements"> No Data…</string>
    <string name="title_empty_view_daily_movements">First add items, stores, and permissions</string>
    <string name="title_empty_view_daily_movements1">So you can add daily movements</string>
    <string name="title_empty_view_store">Start add the stores</string>
    <string name="title_empty_view_permission" >Start add types of permissions</string>
    <string name="title_empty_view_category" >Start add category</string>
    <string name="title_empty_view_stoke_wearehouse" translatable="false"> حتى تستطيع ترصيد المستودع  </string>
    <string name="add_category">Add categories</string>
    <string name="title_add">Adds </string>
    <string name="title_profile">Profile</string>
    <string name="title_daily_movements"> Daily</string>
    <string name="add_store">Add Stores</string>
    <string name="add_store_convert" translatable="false">إضافة المخازن المحولة</string>
    <string name="add_permissions">Add Permissions</string>
    <string name="add_permission">Add Permission</string>
    <string name="title_add_category" translatable="false">إضافة الأصناف</string>
    <string name="empty_view_title_text" translatable="false">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text" translatable="false">Get started by adding a Category</string>
    <string name="name_category">Name Item :</string>
    <string name="name_category_hint">Name Item </string>
    <string name="number_stoke">رقم الترصيد  </string>
    <string name="number">الكمية  </string>
    <string name="name_user">اسم المستخدم </string>
    <string name="natural_category">Nature Item</string>
    <string name="notes">Notes </string>
    <string name="add_category_title">Add Item</string>
    <string name="add_category_titile" translatable="false">اضافة الصنف </string>
    <string name="edit_category_titile" translatable="false">تعديل الصنف </string>
    <string name="search" translatable="false">ابحث في </string>
    <string name="searchBy" translatable="false">ابحث بـ </string>
    <string name="BtAdd">Save</string>
    <string name="BTDelete">Delete</string>
    <string name="add_store_title">Add store</string>
    <string name="update_store_title">Edit Store</string>
    <string name="error_save_store" translatable="false">  لم يتم حفظ المخزن </string>
    <string name="save_store" translatable="false">  تم حفظ المخزن بنجاح </string>
    <string name="error_update_store" translatable="false">  لم يتم تعديل المخزن </string>
    <string name="update_store" translatable="false">  تم تعديل المخزن بنجاح </string>
    <string name="error_delete_store" translatable="false">  لم يتم حذف المخزن </string>
    <string name="delete_store" translatable="false">  تم حذف المخزن بنجاح </string>
    <string name="update_permission_title">Edit Permission</string>
    <string name="error_save_permission" translatable="false">  لم يتم حفظ الأذن </string>
    <string name="save_permission" translatable="false">  تم حفظ الأذن بنجاح </string>
    <string name="error_update_permission" translatable="false">  لم يتم تعديل الأذن </string>
    <string name="update_permission" translatable="false">  تم تعديل الأذن بنجاح </string>
    <string name="error_delete_permission" translatable="false">  لم يتم حذف الأذن </string>
    <string name="delete_permission" translatable="false">  تم حذف الأذن بنجاح </string>
    <string name="first_balance" translatable="false">الرصيد الأول </string>
    <string name="error_first_balance" translatable="false">يجب اختيار الرصيد الأول </string>
    <string name="add_stoke_titile" translatable="false">إضافة ترصيد المستودع </string>
    <string name="update_stoke_titile" translatable="false"> تعديل ترصيد المستودع </string>
    <string name="error_empty_category" > Select Category  </string>
    <string name="error_empty_store">Select Store </string>
    <string name="error_save_category" translatable="false">  لم يتم حفظ الصنف </string>
    <string name="save_category" translatable="false">  تم حفظ الصنف بنجاح </string>
    <string name="error_update_category" translatable="false">  لم يتم تعديل الصنف </string>
    <string name="update_category" translatable="false">  تم تعديل الصنف بنجاح </string>
    <string name="error_delete_category" translatable="false">  لم يتم حذف الصنف </string>
    <string name="delete_category" translatable="false">  تم حذف الصنف بنجاح </string>
    <string name="add_daily_movement_title">Add Daily Movements</string>
    <string name="update_daily_movement_titile" translatable="false">تعديل الحركات اليومية</string>
    <string name="name_permission">نوع الإذن</string>
    <string name="type_permission">Type Permissions </string>
    <string name="type_permission_">Type Permissions :</string>
    <string name="incoming" > Incoming</string>
    <string name="all_store" translatable="false"> كل المخازن</string>
    <string name="select_type_store" translatable="false"> اسم المخزن</string>
    <string name="issued" > Issued </string>
    <string name="convert_to" >Convert To</string>
    <string name="current_Balance" translatable="false"> الرصيد الحالي</string>
    <string name="show_current_Balance" translatable="false"> إظهار الرصيد الحالي</string>
    <string name="error_empty_permission"> Select Permission</string>
    <string name="error_save_daily" >Does not saved successfully</string>
    <string name="save_daily" >Saved successfully </string>
    <string name="error_update_daily" translatable="false"> لم يتم تعديل الحركة</string>
    <string name="update_daily" > Edited successfully </string>
    <string name="error_delete_daily" translatable="false"> لم يتم مسح الحركة</string>
    <string name="delete_daily" > Deleted successfully  </string>
    <string name="error_empty_edit_text" >You can not leave that filed empty</string>
    <string name="error_empty_text" >You can not leave that filed empty or the value is 0 </string>
    <string name="error_exist_name" translatable="false">تم تسجيل اسم المخزن من قبل </string>
    <string name="error_exist_permission" translatable="false">تم تسجيل اسم الإذن من قبل </string>
    <string name="error_exist_category" translatable="false">تم تسجيل اسم الصنف من قبل </string>
    <string name="this_store_used" translatable="false">هذا المخزن مستخدم ولا يمكن مسحه</string>
    <string name="this_store_not_updated" translatable="false">هذا المخزن مستخدم ولا يمكن تعديله</string>
    <string name="this_category_not_updated" translatable="false">هذا الصنف مستخدم ولا يمكن تعديله أوحذفه</string>
    <string name="this_movement_not_allow" translatable="false">هذه الحركة لا يمكن مسحها \n بسبب وجود حركات بعدها</string>
    <string name="this_permission_used" translatable="false">هذا الإذن مستخدم ولا يمكن مسحه</string>
    <string name="this_permission_not_updated" translatable="false">هذا الإذن مستخدم ولا يمكن تعديله</string>
    <string name="this_category_used" translatable="false">هذا الصنف مستخدم ولا يمكن مسحه</string>
    <string name="error_same_store">You can not convert the category to same store </string>
    <string name="error_convert_to">Must select store that convert to it the category</string>
    <string name="error_issued_balance" >The outgoing balance is greater than the available balance</string>
    <string name="delete_dialog_msg" >Are you sure you want delete this item ? </string>
    <string name="delete_dialog_msg_permission">Do you want delete this permission ?</string>
    <string name="title_delete_permission">Delete Permission </string>
    <string name="title_delete_item">Delete Item </string>
    <string name="title_delete_Item">Delete Item </string>
    <string name="cancel" translatable="false">لا</string>
    <string name="editor_activity_title_new_category" translatable="false">إضافة صنف</string>
    <string name="editor_activity_title_edit_category" translatable="false">تعديل صنف</string>
    <string name="editor_insert_category_failed" translatable="false">خطأ في حفظ السنف </string>
    <string name="editor_insert_category_successful" translatable="false">تم حفظ الصنف بنجاح </string>
    <string name="editor_update_category_failed" translatable="false">خطأ في تعديل الصنف</string>
    <string name="editor_update_category_successful" translatable="false">تم تعديل الصنف بنجاح </string>
    <string name="editor_delete_Category_failed" translatable="false">خطأ في مسح الصنف </string>
    <string name="editor_delete_category_successful" translatable="false">تم مسح الصنف بنجاح </string>
    <string name="text_splash" translatable="false">Your store in your phone</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard" translatable="false">Discard</string>
    <string name="keep_editing" translatable="false">Keep Editing</string>
    <string name="type_store_"> Store : </string>
    <string name="type_store"> Store  </string>
    <string name="name_type_store" translatable="false"> اسم المخزن</string>
    <string name="last_edit">Last edit :</string>
    <string name="data_store" translatable="false">اخر تعديل</string>
    <string name="m_store" > M :</string>
    <string name="data_created" translatable="false"> تاريخ الإنشاء</string>
    <string name="add_floating_button">Floating button</string>
    <string name="image">Image</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fab_button">FloatingActionButton</string>
</resources>