<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.imagine.mohamedtaha.store.ui.activity.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/add_data"
        android:orderInCategory="100"
        android:title="@string/add_data"
        android:icon="@drawable/ic_action_add"
        app:showAsAction="always"/>
    <item android:id="@+id/add_stocking_warehouse"
        android:orderInCategory="100"
        android:title="@string/add_stocking_warehouse"
        app:showAsAction="always"/>
    <item android:id="@+id/reportes"
        android:orderInCategory="100"
        android:title="@string/reportes"
        app:showAsAction="never"/>
    <item android:id="@+id/backup"
        android:orderInCategory="100"
        android:title="@string/backup"
        app:showAsAction="never"/>
    <item android:id="@+id/import_backup"
        android:orderInCategory="100"
        android:title="@string/import_backup"
        app:showAsAction="never"/>

</menu>
