<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/icons"
    tools:context="com.imagine.mohamedtaha.store.ui.fragments.categories.EditFragmentCategory">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_title">
        <ImageView
            android:id="@+id/image_titile"
          style="@style/ImageViewTitle"/>
        <TextView
            android:id="@+id/TVTitleCategory"
            style="@style/TextViewTitle"
            android:text="@string/add_category_titile"
             />
    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ETNameCategoryFF"
            android:hint="@string/name_category"
            style="@style/EditTextFragmentTextFirst" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ETNaturalGategoryFF"
            style="@style/EditTextFragmentTextSecond"
            android:hint="@string/natural_category"
            />

    </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <EditText
        android:id="@+id/EtNotesFF"
        style="@style/EditTextFragmentTextSecond"
        android:hint="@string/notes"
        />
</com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        style="@style/LayoutButtonFragment">

        <Button
            android:id="@+id/BTDeleteCategory"
            android:text="@string/BTDelete"
           style="@style/ButtonFragment"
            android:visibility="gone" />
        <Button
            android:id="@+id/BTAddCategory"
            style="@style/ButtonFragment"
            android:text="@string/BtAdd"
            />
    </LinearLayout>
</LinearLayout>
</layout>